Consistently replace String encoding names with StandardCharset arguments
Closes gh-27664